|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2010, PHP 5.3.4
- Upgraded bundled Sqlite3 to version 3.7.0.1. (Ilia)
- Upgraded bundled PCRE to version 8.10. (Ilia)

- Added new character sets to mysqlnd, which are available in MySQL 5.5
  (Andrey)

- Changed deprecated ini options on startup from E_WARNING to E_DEPRECATED. 
  (Kalle)

- Fixed bug #52573 (SplFileObject::fscanf Segmentation fault). (Felipe)
- Fixed bug #52546 (pdo_dblib segmentation fault when iterating MONEY values).
  (Felipe)
- Fixed bug #52534 (var_export array with negative key). (Felipe)
- Fixed bug #52508 (newline problem with parse_ini_file+INI_SCANNER_RAW).
  (Felipe)
- Fixed bug #52487 (PDO::FETCH_INTO leaks memory). (Felipe)
- Fixed bug #52484 (__set() ignores setting properties with empty names).
  (Felipe)
- Fixed bug #52468 (wddx_deserialize corrupts integer field value when left
  empty). (Felipe)
- Fixed bug #52436 (Compile error if systems do not have stdint.h)
  (Sriram Natarajan)
- Fixed bug #52433 (Call to undefined method mysqli::poll() - must be static).
  (Andrey)
- Fixed bug #52417 (MySQLi build failure with mysqlnd on MacOS X). (Andrey)
- Fixed bug #52413 (MySQLi/libmysql build failure on OS X, FreeBSD). (Andrey)
- Fixed bug #52390 (mysqli_report() should be per-request setting). (Kalle)
- Fixed bug #52361 (Throwing an exception in a destructor causes invalid
  catching). (Dmitry)
- Fixed bug #52302 (mysqli_fetch_all does not work with MYSQLI_USE_RESULT).
  (Andrey)
- Fixed bug #51610 (Using oci_connect causes PHP to take a long time to
  exit). Requires Oracle bug fix 9891199 for this patch to have an
  effect. (Oracle Corp.)
- Fixed bug #50481 (Storing many SPLFixedArray in an array crashes). (Felipe)

22 Jul 2010, PHP 5.3.3
- Upgraded bundled sqlite to version 3.6.23.1. (Ilia)
- Upgraded bundled PCRE to version 8.02. (Ilia)

- Added support for JSON_NUMERIC_CHECK option in json_encode() that converts 